<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".swipes.MoveFrag">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/categoryRow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/levelCol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/level"
                />
            <TextView
                android:id="@+id/moveNameCol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/move"
                />
            <TextView
                android:id="@+id/typeCol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/type"
                />
            <TextView
                android:id="@+id/categoryCol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/cat"
                />
            <TextView
                android:id="@+id/powerCol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pwr"
                />
            <TextView
                android:id="@+id/accuracyCol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
               android:text="@string/acc"
                />
            <TextView
                android:id="@+id/ppCol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/categoryRow"
            app:layout_constraintBottom_toBottomOf="parent"
           >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/moveRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- TODO: Update blank fragment layout -->

</FrameLayout>